--- a/Human Resource Management/OrangeHRM_Automation_Test/test-output/emailable-report.html
+++ b/Human Resource Management/OrangeHRM_Automation_Test/test-output/emailable-report.html
@@ -8,11 +8,16 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,481</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">OrangeHRM_Test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">73,195</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">test.java.tests.SearchUserTests</td><td><a href="#m0">searchByUserStatusDropdownDisabled</a></td><td rowspan="1">1754930110116</td><td rowspan="1">5939</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">OrangeHRM_Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">test.java.tests.DashboardTests</td><td><a href="#m0">checkLeftMenuItemsCount</a></td><td rowspan="1">1754930480044</td><td rowspan="1">4087</td></tr><tr class="passedodd"><td rowspan="1">test.java.tests.LoginTests</td><td><a href="#m1">loginTest</a></td><td rowspan="1">1754930467156</td><td rowspan="1">5730</td></tr><tr class="passedeven"><td rowspan="4">test.java.tests.SearchUserTests</td><td><a href="#m2">searchByUserName</a></td><td rowspan="1">1754930490451</td><td rowspan="1">6061</td></tr><tr class="passedeven"><td><a href="#m3">searchByUserRoleDropdown</a></td><td rowspan="1">1754930502513</td><td rowspan="1">5891</td></tr><tr class="passedeven"><td><a href="#m4">searchByUserStatusDropdown</a></td><td rowspan="1">1754930514591</td><td rowspan="1">5790</td></tr><tr class="passedeven"><td><a href="#m5">searchByUserStatusDropdownDisabled</a></td><td rowspan="1">1754930526822</td><td rowspan="1">5969</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">test.java.tests.SearchUserTests#searchByUserStatusDropdownDisabled</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>OrangeHRM_Test</h2><h3 id="m0">test.java.tests.DashboardTests#checkLeftMenuItemsCount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">test.java.tests.LoginTests#loginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Admin</td><td>admin123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">test.java.tests.SearchUserTests#searchByUserName</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">test.java.tests.SearchUserTests#searchByUserRoleDropdown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">test.java.tests.SearchUserTests#searchByUserStatusDropdown</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">test.java.tests.SearchUserTests#searchByUserStatusDropdownDisabled</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
