--- a/API_Testing_Contact_List_Application/test-output/index.html
+++ b/API_Testing_Contact_List_Application/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\vinee\AppData\Local\Temp\testng-eclipse-981188743\testng-customsuite.xml</span>
+                    <span>C:\Users\vinee\AppData\Local\Temp\testng-eclipse--990569197\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods,   8 passed</span>
+                    <span class="method-stats">10 methods,   10 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="test.java.RestAPITesting" class="method navigator-link" hash-for-method="Login">Login</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="test.java.RestAPITesting" class="method navigator-link" hash-for-method="testAddContact">testAddContact</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="test.java.RestAPITesting" class="method navigator-link" hash-for-method="testAddNewUser">testAddNewUser</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -161,9 +171,23 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="Login">
+                  </a> <!-- Login -->
+                  <span class="method-name">Login</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="testAddContact">
                   </a> <!-- testAddContact -->
                   <span class="method-name">testAddContact</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testAddNewUser">
+                  </a> <!-- testAddNewUser -->
+                  <span class="method-name">testAddNewUser</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -220,7 +244,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\vinee\AppData\Local\Temp\testng-eclipse-981188743\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\vinee\AppData\Local\Temp\testng-eclipse--990569197\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -269,44 +293,52 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(8);
+data.addRows(10);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testGetContactById')
+data.setCell(0, 1, 'testAddNewUser')
 data.setCell(0, 2, 'test.java.RestAPITesting')
-data.setCell(0, 3, 1403);
+data.setCell(0, 3, 4129);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testGetUserProfile')
+data.setCell(1, 1, 'testGetContactById')
 data.setCell(1, 2, 'test.java.RestAPITesting')
-data.setCell(1, 3, 1397);
+data.setCell(1, 3, 1657);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testGetContactList')
+data.setCell(2, 1, 'testUpdateUser')
 data.setCell(2, 2, 'test.java.RestAPITesting')
-data.setCell(2, 3, 1385);
+data.setCell(2, 3, 1574);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testUpdateUser')
+data.setCell(3, 1, 'testLogoutUser')
 data.setCell(3, 2, 'test.java.RestAPITesting')
-data.setCell(3, 3, 1358);
+data.setCell(3, 3, 1533);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'testPatchUpdateContact')
+data.setCell(4, 1, 'testUpdateContact')
 data.setCell(4, 2, 'test.java.RestAPITesting')
-data.setCell(4, 3, 1348);
+data.setCell(4, 3, 1521);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'testUpdateContact')
+data.setCell(5, 1, 'testGetContactList')
 data.setCell(5, 2, 'test.java.RestAPITesting')
-data.setCell(5, 3, 1332);
+data.setCell(5, 3, 1509);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'testLogoutUser')
+data.setCell(6, 1, 'Login')
 data.setCell(6, 2, 'test.java.RestAPITesting')
-data.setCell(6, 3, 1318);
+data.setCell(6, 3, 1506);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'testAddContact')
 data.setCell(7, 2, 'test.java.RestAPITesting')
-data.setCell(7, 3, 1303);
+data.setCell(7, 3, 1486);
+data.setCell(8, 0, 8)
+data.setCell(8, 1, 'testPatchUpdateContact')
+data.setCell(8, 2, 'test.java.RestAPITesting')
+data.setCell(8, 3, 1486);
+data.setCell(9, 0, 9)
+data.setCell(9, 1, 'testGetUserProfile')
+data.setCell(9, 2, 'test.java.RestAPITesting')
+data.setCell(9, 3, 1483);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 17 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -333,41 +365,45 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">test.java.RestAPITesting</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">setupAndLogin</span>
+              <div class="test-method">
+                <span class="method-name">testAddNewUser</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
+              </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testGetUserProfile</span>
-                <span class="method-start">3676 ms</span>
+                <span class="method-start">4136 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testUpdateUser</span>
-                <span class="method-start">5078 ms</span>
+                <span class="method-start">5624 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Login</span>
+                <span class="method-start">7200 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testAddContact</span>
-                <span class="method-start">6439 ms</span>
+                <span class="method-start">8708 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testGetContactList</span>
-                <span class="method-start">7744 ms</span>
+                <span class="method-start">10196 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testGetContactById</span>
-                <span class="method-start">9130 ms</span>
+                <span class="method-start">11708 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testUpdateContact</span>
-                <span class="method-start">10534 ms</span>
+                <span class="method-start">13366 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testPatchUpdateContact</span>
-                <span class="method-start">11868 ms</span>
+                <span class="method-start">14890 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testLogoutUser</span>
-                <span class="method-start">13218 ms</span>
+                <span class="method-start">16378 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
